[project]
name = "nonebot-plugin-tortoise-orm"
version = "0.1.0"
description = "一个通用数据库连接插件"
authors = [
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = [
    "nonebot2<3.0.0.0,>=2.0.0-beta.1",
    "tortoise-orm[asyncpg]<1.0.0,>=0.19.1",
    "aiosqlite<1.0.0,>=0.17.0",
    "aiomysql<1.0.0,>=0.1.1",
]
requires-python = ">=3.7.3,<4.0"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-tortoise-orm"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<22.0,>=21.10b0",
    "flake8<5.0.0,>=4.0.1",
    "isort<6.0.0,>=5.10.1",
    "nb-cli<1.0.0,>=0.6.6",
    "click<9.0.0,>=8.1.3",
    "nonebot-adapter-onebot<3.0.0.0,>=2.0.0-beta.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

