[project]
name = "nonebot-plugin-tortoise-orm"
version = "0.1.0"
description = "一个通用数据库连接插件"
authors = [
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = [
    "nonebot2>=2.0.0",
    "tortoise-orm[asyncpg]>=0.19.3",
    "aiosqlite>=0.17.0",
    "aiomysql>=0.2.0",
    "nonebot-plugin-localstore>=0.5.0",
]
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-tortoise-orm"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "nb-cli>=1.1.2",
    "nonebot-adapter-onebot>=2.2.3",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
