[project]
name = "nonebot-plugin-tortoise-orm"
version = "0.1.3"
description = "一个通用数据库连接插件"
authors = [{ name = "kexue", email = "xana278@foxmail.com" }]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-plugin-localstore>=0.5.0",
    "tortoise-orm[asyncmy,asyncodbc,asyncpg]>=0.19.3",
    "asyncpg>=0.29.0",
    "pyodbc>=5.1.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.9,<4.0"
license = { text = "MIT" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-tortoise-orm"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "nb-cli>=1.1.2",
    "nonebot-adapter-onebot>=2.2.3",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
ignore = ["E402"]
